Resolve critical issues and refactor code for better maintainability, using SonarLint