@@ -1,7 +1,6 @@
 package com.job_tracker.resume;
 
 import com.job_tracker.user.User;
-import com.job_tracker.user.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
@@ -10,16 +9,16 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.IOException;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
-public class ResumeServiceImpl implements ResumeService{
+public class ResumeServiceImpl implements ResumeService {
+
+    private final ResumeRepository resumeRepository;
 
     @Autowired
-    private ResumeRepository resumeRepository;
-
-    @Autowired
-    private UserRepository userRepository;
+    public ResumeServiceImpl(ResumeRepository resumeRepository) {
+        this.resumeRepository = resumeRepository;
+    }
 
     public User getUser() {
         return (User) SecurityContextHolder
@@ -33,7 +32,7 @@ public class ResumeServiceImpl implements ResumeService{
                 .findAll()
                 .stream()
                 .map(ResumeMapper.INSTANCE::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public String saveResume(MultipartFile file) {
@@ -45,7 +44,7 @@ public class ResumeServiceImpl implements ResumeService{
             resume.setResumeName(resumeName);
         } catch (IOException e) {
             e.printStackTrace();
-            throw new RuntimeException("Failed to save resume", e);
+            throw new ResumeException("Failed to save resume", e);
         }
         resume.setUser(getUser());
         resumeRepository.save(resume);
@@ -61,7 +60,7 @@ public class ResumeServiceImpl implements ResumeService{
         return resumes
                 .stream()
                 .map(ResumeMapper.INSTANCE::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public String deleteUserResume(UUID resumeId) {
